shaderc-bindings/shaderc_wrapper.h

typedef struct shaderc_compile_options* shaderc_compile_options_t;
// Source language
typedef enum {
    shaderc_source_language_glsl,
    shaderc_source_language_hlsl,
} shaderc_source_language;
// Optimization level
typedef enum {
    shaderc_optimization_level_zero = 0,
    shaderc_optimization_level_size = 1,
    shaderc_optimization_level_performance = 2,
} shaderc_optimization_level;
void shaderc_compile_options_add_macro_definition(shaderc_compile_options_t options,
                                                  const char* name, size_t name_length,
                                                  const char* value, size_t value_length);
void shaderc_compile_options_set_source_language(shaderc_compile_options_t options,
                                                 shaderc_source_language lang);
void shaderc_compile_options_set_generate_debug_info(shaderc_compile_options_t options);
void shaderc_compile_options_set_optimization_level(shaderc_compile_options_t options,
                                                    shaderc_optimization_level level);
void shaderc_compile_options_set_forced_version_profile(shaderc_compile_options_t options,
                                                        int version, int profile);
void shaderc_compile_options_set_include_callbacks(shaderc_compile_options_t options,
                                                   void* resolver_fn,
                                                   void* releaser_fn,
                                                   void* user_data);