shaderc-bindings/src/main/java/io/github/yetyman/shaderc/generated/ShadercFFM.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void shaderc_compile_options_add_macro_definition(shaderc_compile_options_t options, const char *name, size_t name_length, const char *value, size_t value_length)
     * }
     */
    public static MethodHandle shaderc_compile_options_add_macro_definition$handle() {
        return shaderc_compile_options_add_macro_definition.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void shaderc_compile_options_add_macro_definition(shaderc_compile_options_t options, const char *name, size_t name_length, const char *value, size_t value_length)
     * }
     */
    public static MemorySegment shaderc_compile_options_add_macro_definition$address() {
        return shaderc_compile_options_add_macro_definition.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void shaderc_compile_options_add_macro_definition(shaderc_compile_options_t options, const char *name, size_t name_length, const char *value, size_t value_length)
     * }
     */
    public static void shaderc_compile_options_add_macro_definition(MemorySegment options, MemorySegment name, long name_length, MemorySegment value, long value_length) {
        var mh$ = shaderc_compile_options_add_macro_definition.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_options_add_macro_definition", options, name, name_length, value, value_length);
            }
            mh$.invokeExact(options, name, name_length, value, value_length);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_options_set_source_language {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ShadercFFM.C_POINTER,
            ShadercFFM.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_options_set_source_language");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_source_language(shaderc_compile_options_t options, shaderc_source_language lang)
     * }
     */
    public static FunctionDescriptor shaderc_compile_options_set_source_language$descriptor() {
        return shaderc_compile_options_set_source_language.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_source_language(shaderc_compile_options_t options, shaderc_source_language lang)
     * }
     */
    public static MethodHandle shaderc_compile_options_set_source_language$handle() {
        return shaderc_compile_options_set_source_language.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_source_language(shaderc_compile_options_t options, shaderc_source_language lang)
     * }
     */
    public static MemorySegment shaderc_compile_options_set_source_language$address() {
        return shaderc_compile_options_set_source_language.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void shaderc_compile_options_set_source_language(shaderc_compile_options_t options, shaderc_source_language lang)
     * }
     */
    public static void shaderc_compile_options_set_source_language(MemorySegment options, int lang) {
        var mh$ = shaderc_compile_options_set_source_language.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_options_set_source_language", options, lang);
            }
            mh$.invokeExact(options, lang);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_options_set_generate_debug_info {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ShadercFFM.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_options_set_generate_debug_info");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_generate_debug_info(shaderc_compile_options_t options)
     * }
     */
    public static FunctionDescriptor shaderc_compile_options_set_generate_debug_info$descriptor() {
        return shaderc_compile_options_set_generate_debug_info.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_generate_debug_info(shaderc_compile_options_t options)
     * }
     */
    public static MethodHandle shaderc_compile_options_set_generate_debug_info$handle() {
        return shaderc_compile_options_set_generate_debug_info.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_generate_debug_info(shaderc_compile_options_t options)
     * }
     */
    public static MemorySegment shaderc_compile_options_set_generate_debug_info$address() {
        return shaderc_compile_options_set_generate_debug_info.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void shaderc_compile_options_set_generate_debug_info(shaderc_compile_options_t options)
     * }
     */
    public static void shaderc_compile_options_set_generate_debug_info(MemorySegment options) {
        var mh$ = shaderc_compile_options_set_generate_debug_info.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_options_set_generate_debug_info", options);
            }
            mh$.invokeExact(options);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_options_set_optimization_level {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ShadercFFM.C_POINTER,
            ShadercFFM.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_options_set_optimization_level");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_optimization_level(shaderc_compile_options_t options, shaderc_optimization_level level)
     * }
     */
    public static FunctionDescriptor shaderc_compile_options_set_optimization_level$descriptor() {
        return shaderc_compile_options_set_optimization_level.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_optimization_level(shaderc_compile_options_t options, shaderc_optimization_level level)
     * }
     */
    public static MethodHandle shaderc_compile_options_set_optimization_level$handle() {
        return shaderc_compile_options_set_optimization_level.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_optimization_level(shaderc_compile_options_t options, shaderc_optimization_level level)
     * }
     */
    public static MemorySegment shaderc_compile_options_set_optimization_level$address() {
        return shaderc_compile_options_set_optimization_level.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void shaderc_compile_options_set_optimization_level(shaderc_compile_options_t options, shaderc_optimization_level level)
     * }
     */
    public static void shaderc_compile_options_set_optimization_level(MemorySegment options, int level) {
        var mh$ = shaderc_compile_options_set_optimization_level.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_options_set_optimization_level", options, level);
            }
            mh$.invokeExact(options, level);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_options_set_forced_version_profile {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ShadercFFM.C_POINTER,
            ShadercFFM.C_INT,
            ShadercFFM.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_options_set_forced_version_profile");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_forced_version_profile(shaderc_compile_options_t options, int version, int profile)
     * }
     */
    public static FunctionDescriptor shaderc_compile_options_set_forced_version_profile$descriptor() {
        return shaderc_compile_options_set_forced_version_profile.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_forced_version_profile(shaderc_compile_options_t options, int version, int profile)
     * }
     */
    public static MethodHandle shaderc_compile_options_set_forced_version_profile$handle() {
        return shaderc_compile_options_set_forced_version_profile.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_forced_version_profile(shaderc_compile_options_t options, int version, int profile)
     * }
     */
    public static MemorySegment shaderc_compile_options_set_forced_version_profile$address() {
        return shaderc_compile_options_set_forced_version_profile.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void shaderc_compile_options_set_forced_version_profile(shaderc_compile_options_t options, int version, int profile)
     * }
     */
    public static void shaderc_compile_options_set_forced_version_profile(MemorySegment options, int version, int profile) {
        var mh$ = shaderc_compile_options_set_forced_version_profile.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_options_set_forced_version_profile", options, version, profile);
            }
            mh$.invokeExact(options, version, profile);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_options_set_include_callbacks {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_options_set_include_callbacks");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_include_callbacks(shaderc_compile_options_t options, void *resolver_fn, void *releaser_fn, void *user_data)
     * }
     */
    public static FunctionDescriptor shaderc_compile_options_set_include_callbacks$descriptor() {
        return shaderc_compile_options_set_include_callbacks.DESC;
    }
